Grid view/ Responsive web & flex grid
2 attempts at different methods of applying a grid format for floating items, need to do: polish both of them so they fit the split div  and are centered in said div.

--- a/Web Dev Portfolio &/WebPortal.html
+++ b/Web Dev Portfolio &/WebPortal.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="CSS/Portal-Style.css">
 </head>
 
@@ -62,49 +63,85 @@
 <p class="p"> Greenthumbed games designer & programmer,
 front end web developer and artist with experience in several programming languages & IDE's and art and modeling software.
 Main interests lie in games design and front end web design and development. </p>
-<section>
-</div>
-</div>
-
-<!-- <div>
-<section id="Skills">
-<h1> Skills </h1>
-<article class="split left">
-</article>
-<article class="split right">
-</article>
 </section>
-</div> -->
+</div>
+</div>
 
 <section class="Splitcontainer centered">
   <h1>Skills</h1>
   <div class="left-half">
     <article class="Splitarticle">
-      <h1>Left Half</h1>
-      <div class="slide-left">
-      <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+      <h1>Technical</h1>
+    <div>
+      <div>
+        <div class="row">
+          <div class="col-1 skills">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
+          </div>
+
+        <div class="col-1 skills">
+          <ul>
+            <li>Javascript</li>
+            <li>Bootstrap</li>
+          </ul>
+        </div>
+
+      </div>
     </div>
     </article>
-  </div>
+</div>
   <div class="right-half">
     <article class="Splitarticle">
-      <h1>Right Half</h1>
-      <div class="slide-right">
-      <p>If your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+      <h1>Transferable</h1>
+      <div>
+
+<ul class="flex-container">
+  <li class="flex-item">1</li>
+  <li class="flex-item">2</li>
+  <li class="flex-item">3</li>
+  <li class="flex-item">4</li>
+  <li class="flex-item">5</li>
+  <li class="flex-item">6</li>
+</ul>
+
+
     </div>
     </article>
   </div>
+</div>
 </section>
 
+<br>
+<br>
+<br>
+<br>
 
-<div id="Education">
-</div>
+<section id="Education" class="centered">
+<h1>Education</h1>
+<ul style="list-style-type:square;">
+  <li>BSc in Computer Science - University of Lincoln (2016-2018) - Grade: 2:2 </li>
+  <li>Msc in Games Design and Development - University of Lincoln (2019-2020) - Grade: Predicted Merit, Guarnteed Pass </li>
+  <li>Btec Construction & Architecture Tech - Sheffield City College (2010-2013)</li>
+</ul>
+</section>
 
-<div id="Experience">
 </div>
+</section>
 
-<div id="Contact">
+<section>
+<div id="Experience" class="centered">
+  <h1>Experience</h1>
 </div>
+</section>
+
+<section>
+<div id="Contact" class="centered">
+  <h1>Contact Me</h1>
+</div>
+</section>
 
 <script>
 window.onscroll = function() {stickFunction()};
