--- a/Web Dev Portfolio &/WebPortal.html
+++ b/Web Dev Portfolio &/WebPortal.html
@@ -59,6 +59,7 @@
 <br/>
 <br/>
 <br/>
+<br/>
 <h1> About me </h1>
 <p class="p"> Greenthumbed games designer & programmer,
 front end web developer and artist with experience in several programming languages & IDE's and art and modeling software.
@@ -96,18 +97,14 @@ Main interests lie in games design and front end web design and development. </p
   <div class="right-half">
     <article class="Splitarticle">
       <h1>Transferable</h1>
-      <div>
-
-<ul class="flex-container">
-  <li class="flex-item">1</li>
-  <li class="flex-item">2</li>
-  <li class="flex-item">3</li>
-  <li class="flex-item">4</li>
-  <li class="flex-item">5</li>
-  <li class="flex-item">6</li>
-</ul>
-
-
+      <div class="grid centeredSplit">
+        <div>HTML</div>
+        <div>CSS</div>
+        <div>Javascript</div>
+        <br/>
+        <div>HTML</div>
+        <div>CSS</div>
+        <div>Javascript</div>
     </div>
     </article>
   </div>
