--- a/Web Dev Portfolio &/WebPortal.html
+++ b/Web Dev Portfolio &/WebPortal.html
@@ -34,7 +34,7 @@
 
 <div class="section2" id="About-me">
 <nav>
-<div id="buttons">
+<div class="buttons">
 <ul>
  <li><a href="default.asp">
    <img alt="Github logo" src="Images/github_PNG20.png" width="75" height="75">
@@ -68,12 +68,13 @@ Main interests lie in games design and front end web design and development. </p
 </div>
 </div>
 
+<!--
 <section class="Splitcontainer centered">
   <h1>Skills</h1>
+  <div>
   <div class="left-half">
     <article class="Splitarticle">
       <h1>Technical</h1>
-    <div>
       <div>
         <div class="row">
           <div class="col-1 skills">
@@ -92,11 +93,24 @@ Main interests lie in games design and front end web design and development. </p
 
       </div>
     </div>
-    </article>
+    <div class="grid centeredSplit">
+      <div>HTML</div>
+      <div>CSS</div>
+      <div>Javascript</div>
+      <br/>
+      <div>PHP</div>
+      <div>Haskel</div>
+      <br/>
+      <div>C#</div>
+      <div>C++</div>
+      <div>Python</div>
+  </div>
+</article>
 </div>
+<div class="vl"></div>
   <div class="right-half">
     <article class="Splitarticle">
-      <h1>Transferable</h1>
+      <h1>Programs</h1>
       <div class="grid centeredSplit">
         <div>HTML</div>
         <div>CSS</div>
@@ -107,6 +121,60 @@ Main interests lie in games design and front end web design and development. </p
         <div>Javascript</div>
     </div>
     </article>
+  </div>
+  <hr class="solid">
+  <div class="centered">
+    <h1> Transferable </h1>
+    <div class="grid centeredSplit">
+      <div>HTML</div>
+      <div>CSS</div>
+      <div>Javascript</div>
+  </div>
+  </div>
+</div>
+</section> -->
+
+<section class="Splitcontainer centered">
+  <h1>Skills</h1>
+  <div class="skills-grid">
+  <div class="left-half">
+    <article class="Splitarticle">
+      <h1>Technical</h1>
+    <div class="grid centeredSplit">
+      <div>HTML</div>
+      <div>CSS</div>
+      <div>Javascript</div>
+      <div>PHP</div>
+      <div>Haskel</div>
+      <div>C#</div>
+      <div>C++</div>
+      <div>Python</div>
+  </div>
+</article>
+</div>
+<div class="vl"></div>
+  <div class="right-half">
+    <article class="Splitarticle">
+      <h1>Programs</h1>
+      <div class="grid centeredSplit">
+        <div>HTML</div>
+        <div>CSS</div>
+        <div>Javascript</div>
+        <div>HTML</div>
+        <div>CSS</div>
+        <div>Javascript</div>
+    </div>
+    </article>
+  </div>
+  <hr class="solid">
+  <div class="centered centered--fullwidth">
+    <h1> Transferable </h1>
+    <div class="grid centeredSplit">
+      <div>HTML</div>
+      <div>CSS</div>
+      <div>Javascript</div>
+  </div>
+  </div>
   </div>
 </div>
 </section>
