--- a/Web Dev Portfolio &/WebPortal.html
+++ b/Web Dev Portfolio &/WebPortal.html
@@ -134,7 +134,7 @@ Main interests lie in games design and front end web design and development. </p
 </div>
 </section> -->
 
-<section class="Splitcontainer centered">
+<section class="Splitcontainer centered" id="Skills">
   <h1>Skills</h1>
   <div class="skills-grid">
   <div class="left-half">
